// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Zoom should match snapshot with custom attributes 1`] = `
<div class="foo"
     tabindex="-1"
     title="bar"
>
  <button type="button"
          tabindex="0"
          class="rs-zoom-in"
          title="Zoom in"
  >
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 448 512"
         focusable="false"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z">
      </path>
    </svg>
  </button>
  <button type="button"
          tabindex="0"
          class="rs-zoom-out"
          title="Zoom out"
  >
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 448 512"
         focusable="false"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Zoom should match snapshot with zoom slider 1`] = `
<div class="rs-zooms-bar">
  <button type="button"
          tabindex="0"
          class="rs-zoom-in"
          title="Zoom in"
  >
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 448 512"
         focusable="false"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z">
      </path>
    </svg>
  </button>
  <div class="rs-zoomslider-wrapper">
    <div style="pointer-events: auto;"
         class="ol-zoomslider ol-unselectable ol-control"
    >
      <button type="button"
              class="ol-zoomslider-thumb ol-unselectable"
              tabindex="-1"
      >
      </button>
    </div>
  </div>
  <button type="button"
          tabindex="0"
          class="rs-zoom-out"
          title="Zoom out"
  >
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 448 512"
         focusable="false"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Zoom should match snapshot. 1`] = `
<div class="rs-zooms-bar">
  <button type="button"
          tabindex="0"
          class="rs-zoom-in"
          title="Zoom in"
  >
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 448 512"
         focusable="false"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z">
      </path>
    </svg>
  </button>
  <button type="button"
          tabindex="0"
          class="rs-zoom-out"
          title="Zoom out"
  >
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 448 512"
         focusable="false"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z">
      </path>
    </svg>
  </button>
</div>
`;
